Moved remaining commands to use KameHouseShellSystemCommand